Refactored demo to allow several test files.

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,313 +24,14 @@
                 models-data="{{modelsData}}">
     </cg-element>
 </template>
+<script src="dude-models.js"></script>
+<script src="test-basic.js"></script>
+<script src="test-shoot-behavior.js"></script>
 <script>
     var demo = document.querySelector("#demo");
-    demo.rendererData = {
-        "config": {
-            "zoom": {
-                "translate": [0, 0],
-                "scale": 1
-            }
-        },
-        "groups": [
-            {
-                "id": "0",
-                "type": "group",
-                "description": "Something interesting",
-                "position": [10, 20],
-                "size": [200, 200]
-            },
-            {
-                "id": "Koala",
-                "type": "group",
-                "description": "Child",
-                "position": [10, 20],
-                "size": [100, 100],
-                "parent": "0"
-            }
-        ],
-        "blocks": [
-            {
-                "id": "0",
-                "type": "block",
-                "position": [120, 40],
-                "parent": "0"
-            },
-            {
-                "id": "1",
-                "type": "block",
-                "position": [240, 240],
-                "parent": "Koala"
-            },
-            {
-                "id": "2",
-                "type": "block",
-                "position": [400, 240],
-                "parent": "Koala"
-            },
-            {
-                "id": "3",
-                "type": "block",
-                "position": [600, 600]
-            },
-            {
-                "id": "4",
-                "type": "block",
-                "position": [100, 500]
-            },
-            {
-                "id": "5",
-                "type": "block",
-                "position": [200, 400]
-            },
-            {
-                "id": "6",
-                "type": "block",
-                "position": [300, 300]
-            }
-        ]
-    };
-    demo.modelsData = {
-
-        // Entity
-
-        "Entity.destroy": {
-            "cgType": "Instruction",
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgName": "this",
-                    "cgValueType": "Entity"
-                }
-            ]
-        },
-        "Entity.add_entity": {
-            "cgType": "Instruction",
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgName": "this",
-                    "cgValueType": "Entity"
-                },
-                {
-                    "cgType": "Point",
-                    "cgName": "name",
-                    "cgValueType": "String"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Entity"}
-        },
-        "Entity.has_behavior": {
-            "cgType": "Function",
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgName": "this",
-                    "cgValueType": "Entity"
-                },
-                {
-                    "cgType": "Point",
-                    "cgName": "name",
-                    "cgValueType": "String"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Boolean"}
-        },
-        "Entity.add_behavior": {
-            "cgType": "Instruction",
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgName": "this",
-                    "cgValueType": "Entity"
-                },
-                {
-                    "cgType": "Point",
-                    "cgName": "name",
-                    "cgValueType": "String"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Behavior"}
-        },
-        "Entity.behavior": {
-            "cgType": "Instruction",
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgName": "this",
-                    "cgValueType": "Entity"
-                },
-                {
-                    "cgType": "Point",
-                    "cgName": "name",
-                    "cgValueType": "String"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Behavior"}
-        },
-        "Entity.name": {
-            "cgType": "Getter",
-            "cgClassType": "Entity",
-            "cgValueType": "String"
-        },
-        "Entity.parent": {
-            "cgType": "Getter",
-            "cgClassType": "Entity",
-            "cgValueType": "Entity"
-        },
-
-        // Operators
-
-        "greater_than": {
-            "cgType": "Operator",
-            "cgTemplates": {
-                "TValue": ["Number", "Vec2", "Vec3", "Vec4"]
-            },
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "first"
-                },
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "second"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Boolean"}
-        },
-        "add": {
-            "cgType": "Operator",
-            "cgTemplates": {
-                "TValue": ["Number", "Vec2", "Vec3", "Vec4"]
-            },
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "first"
-                },
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "second"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Number", "cgTemplate": "TValue"}
-        },
-        "substract": {
-            "cgType": "Operator",
-            "cgTemplates": {
-                "TValue": ["Number", "Vec2", "Vec3", "Vec4"]
-            },
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "first"
-                },
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "second"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Number", "cgTemplate": "TValue"}
-        },
-        "multiply": {
-            "cgType": "Operator",
-            "cgTemplates": {
-                "TValue": ["Number", "Vec2", "Vec3", "Vec4"]
-            },
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "first"
-                },
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "second"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Number", "cgTemplate": "TValue"}
-        },
-        "divide": {
-            "cgType": "Operator",
-            "cgTemplates": {
-                "TValue": ["Number", "Vec2", "Vec3", "Vec4"]
-            },
-            "cgInputs": [
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "first"
-                },
-                {
-                    "cgType": "Point",
-                    "cgTemplate": "TValue",
-                    "cgValueType": "Number",
-                    "cgName": "second"
-                }
-            ],
-            "cgReturn": {"cgValueType": "Number", "cgTemplate": "TValue"}
-        }
-    };
-    demo.graphData = {
-        "blocks": [
-            {
-                "cgId": "0",
-                "cgName": "Process number",
-                "cgInputs": [
-                    {
-                        "cgType": "Point",
-                        "cgName": "in",
-                        "cgValueType": "Number"
-                    }
-                ]
-            },
-            {
-                "cgId": "1",
-                "cgName": "Get number",
-                "cgOutputs": [
-                    {
-                        "cgType": "Point",
-                        "cgName": "out",
-                        "cgValueType": "Number"
-                    }
-                ]
-            },
-            {
-                "cgId": "2",
-                "cgOutputs": [
-                    {
-                        "cgType": "Point",
-                        "cgName": "out",
-                        "cgValueType": "Number"
-                    }
-                ]
-            },
-            {"cgId": "3", "cgModel": "Entity.add_entity"},
-            {"cgId": "4", "cgType": "Variable", "cgValueType": "Number", "cgName": "size", "cgValue": 5},
-            {"cgId": "5", "cgModel": "Entity.name"},
-            {"cgId": "6", "cgModel": "add"}
-        ],
-        "connections": [
-            {"cgOutputBlockId": "1", "cgOutputName": "out", "cgInputBlockId": "0", "cgInputName": "in"}
-        ]
-    };
+    demo.modelsData = DUDE_MODELS;
+    demo.graphData = TEST_SHOOT_BEHAVIOR_GRAPH_DATA;
+    demo.rendererData = TEST_SHOOT_BEHAVIOR_RENDERER_DATA;
 </script>
 </body>
 </html>
