Changed main font.

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -1,4 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style is="custom-style">
 
     /**
@@ -8,7 +8,7 @@
         --cg-primary-color: #5990c7;
         --cg-background: #333333;
         --cg-primary-text: {
-             font-family: "Oxygen", sans-serif;
+             font-family: "Inconsolata", monospace;
              font-weight: 300;
         };
     }
