Created basic dude saver.

--- a/cg-element.html
+++ b/cg-element.html
@@ -24,6 +24,7 @@ methods and properties.
             bottom: 20px;
             right: 20px;
             --paper-fab-background: var(--cg-primary-color);
+            --paper-fab-keyboard-focus-background: var(--cg-primary-color);
         }
     </style>
     <template>
