--- a/cg-element.html
+++ b/cg-element.html
@@ -15,9 +15,7 @@ methods and properties.
 <dom-module id="cg-element">
     <style>
         #svg {
-            width: 100%;
-            height: 100%;
-            background: var(--cg-background);
+            background: var(--cg-background-color);
         }
         #add {
             position: absolute;
@@ -28,8 +26,9 @@ methods and properties.
         }
     </style>
     <template>
-        <svg id="svg"></svg>
-        <paper-fab id="add" icon="add" title="Add" on-click="_createBlock"></paper-fab>
+        <div class="layout flex horizontal">
+            <svg id="svg" class="flex"></svg>
+        </div>
     </template>
 </dom-module>
 <script src="../d3/d3.js"></script>
@@ -65,15 +64,14 @@ methods and properties.
             // for debug
             window.cgRenderer = this._renderer;
             window.cgGraph = this._graph;
-        },
-        _createBlock: function () {
-            var model = prompt("Model name:");
-            if (model) {
-                this._graph.loader.loadBlock({
-                    "cgId": "generated_" + this._currentId++,
-                    "cgModel": model
-                });
-            }
-        }
+        }//,
+//        _createBlock: function () {
+//            if (model) {
+//                this._graph.loader.loadBlock({
+//                    "cgId": "generated_" + this._currentId++,
+//                    "cgModel": model
+//                });
+//            }
+//        }
     });
 </script>
