--- a/demo/index.html
+++ b/demo/index.html
@@ -5,24 +5,27 @@
     <title>Codegraph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <style>
-        body {
-            margin: 0;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
+        #wrapper {
+            border: 4px solid #242424;
+        }
+        .panel {
+            border: 4px solid #242424;
         }
     </style>
     <link rel="import" href="../themes/dude.html">
     <link rel="import" href="../cg-element.html">
+    <link rel="import" href="../cg-inspector.html">
 </head>
-<body>
+<body class="fullbleed">
 <template id="demo" is="dom-bind">
-    <cg-element graph-data="{{graphData}}"
-                renderer-data="{{rendererData}}"
-                models-data="{{modelsData}}">
-    </cg-element>
+    <div id="wrapper" class="layout horizontal fit">
+        <cg-element class="panel layout horizontal flex-2"
+                    graph-data="{{graphData}}"
+                    renderer-data="{{rendererData}}"
+                    models-data="{{modelsData}}">
+        </cg-element>
+        <cg-inspector class="panel layout horizontal flex"></cg-inspector>
+    </div>
 </template>
 <script src="dude-models.js"></script>
 <script src="test-basic.js"></script>
