--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,8 @@
                     renderer-data="{{rendererData}}"
                     models-data="{{modelsData}}">
         </cg-element>
-        <cg-inspector class="panel layout horizontal flex"></cg-inspector>
+        <cg-inspector class="panel layout horizontal flex"
+                      models="{{modelsData}}"></cg-inspector>
     </div>
 </template>
 <script src="dude-models.js"></script>
