--- a/themes/dude.html
+++ b/themes/dude.html
@@ -8,6 +8,13 @@
         --cg-primary-color: #5990c7;
         --cg-stream-color: #888888;
         --cg-background-color: #333333;
+
+        --cg-title-text: {
+            font-family: "Inconsolata", monospace;
+            font-weight: 300;
+            fill: hsla(0, 0%, 80%, 1);
+            color: hsla(0, 0%, 80%, 1);
+        };
         --cg-primary-text: {
              font-family: "Inconsolata", monospace;
              font-weight: 300;
