Renamed test- in demo- for demos.

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,13 +29,13 @@
     </div>
 </template>
 <script src="dude-models.js"></script>
-<script src="test-basic.js"></script>
-<script src="test-shoot-behavior.js"></script>
+<script src="demo-basic.js"></script>
+<script src="demo-shoot-behavior.js"></script>
 <script>
     var demo = document.querySelector("#demo");
     demo.modelsData = DUDE_MODELS;
-    demo.graphData = TEST_SHOOT_BEHAVIOR_GRAPH_DATA;
-    demo.rendererData = TEST_SHOOT_BEHAVIOR_RENDERER_DATA;
+    demo.graphData = DEMO_SHOOT_BEHAVIOR_GRAPH_DATA;
+    demo.rendererData = DEMO_SHOOT_BEHAVIOR_RENDERER_DATA;
 </script>
 </body>
 </html>
