--- a/cg-element.html
+++ b/cg-element.html
@@ -51,19 +51,24 @@ methods and properties.
             /**
              * A list of blocks models used as shortcuts to generate blocks.
              */
-            modelsData: Object
+            modelsData: Object,
+
+            /**
+             * Holds a reference on the graph.
+             */
+            graph: cg.Graph
 
         },
         _currentId: 0,
         ready: function () {
-            this._graph = new cg.Graph(this.graphData, this.modelsData);
-            this._renderer = new cg.Renderer(this.$.svg, this._graph, this.rendererData);
-            this._graph.loader.load();
-            this._renderer.initialize();
+            this.graph = new cg.Graph(this.graphData, this.modelsData);
+            this.renderer = new cg.Renderer(this.$.svg, this.graph, this.rendererData);
+            this.graph.loader.load();
+            this.renderer.initialize();
 
             // for debug
-            window.cgRenderer = this._renderer;
-            window.cgGraph = this._graph;
+            window.cgRenderer = this.renderer;
+            window.cgGraph = this.graph;
         }//,
 //        _createBlock: function () {
 //            if (model) {
