--- a/themes/dude.html
+++ b/themes/dude.html
@@ -12,6 +12,11 @@
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
         --cg-display-font: "Dosis", monospace;
+        --paper-button: {
+             text-transform: none;
+             background: var(--cg-primary-color);
+             color: var(--cg-background-color);
+        };
     }
 
     /**
