--- a/themes/dude.html
+++ b/themes/dude.html
@@ -12,10 +12,19 @@
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
         --cg-display-font: "Dosis", monospace;
+        --paper-input-container-focus-color: var(--cg-primary-color);
+        --paper-input-container-input-color: var(--cg-text-color);
+        --paper-input-container-input: {
+            font-family: var(--cg-display-font);
+        };
+        --paper-input-container-label: {
+            font-family: var(--cg-display-font);
+        };
         --paper-button: {
-             text-transform: none;
-             background: var(--cg-primary-color);
-             color: var(--cg-background-color);
+            font-size: 0.9em;
+            text-transform: none;
+            background: var(--cg-primary-color);
+            color: var(--cg-background-color);
         };
     }
 
